--- a/src/views/index.html
+++ b/src/views/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/public/css/main.css">
-    <script defer src="../public/js/aplication.js"></script>
+    <script defer src="../public/js/script.js"></script>
     <title>Document</title>
 </head>
 
@@ -18,21 +18,17 @@
                 <div class="wrapper-educational-institution">
                     <div class="educational-institution-item education-item">
                         <h3 class="educational-institution-title">Уровень образования</h3>
-                        <div class="block-educational-institution">
-                            <div class="educational-institution name">
-                                Среднее профессиональное
-                            </div>
-                        </div>
-                        <div class="arrom-botton institution"></div>
+                        <div class="educational-institution title">Среднее профессиональное</div>
+                        <ul id="education-list" class="block-educational-institution hide">
+                        </ul>
+                        <div class="arrom-botton institution close"></div>
                     </div>
                     <div class="educational-institution-item education-item">
                         <h3 class="educational-institution-title">Год окончания</h3>
-                        <div class="block-educational-institution">
-                            <div class="educational-institution year">
-                                1992
-                            </div>
-                        </div>
-                        <div class="arrom-botton years"></div>
+                        <div class="educational-institution years">1992</div>
+                        <ul id="year-list" class="block-educational-institution hide">
+                        </ul>
+                        <div class="arrom-botton years close"></div>
                     </div>
                 </div>
                 <div class="education-item university">
