--- a/src/views/index.html
+++ b/src/views/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/src/public/css/main.css">
     <script defer src="../public/js/script.js"></script>
-    <title>Document</title>
+    <title>WebRise</title>
 </head>
 
 <body>
